<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/key_cancel" />

        <Button
            android:id="@+id/button_percentages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_percentages" />

        <Button
            android:id="@+id/button_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_division" />

        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_7" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_8" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_9" />

        <Button
            android:id="@+id/button_multiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_multiplication" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_4" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_5" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_6" />

        <Button
            android:id="@+id/button_subtraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_subtraction" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_1" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_2" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_3" />

        <Button
            android:id="@+id/button_addition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_addition" />

        <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/key_0" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_dot" />

        <Button
            android:id="@+id/button_equally"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_equally" />
    </GridLayout>
</FrameLayout>