<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_yellow" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4">

        <TextView
            android:id="@+id/output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_36sp" />

        <TextView
            android:id="@+id/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_72sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_clear"
            style="@style/ButtonMoccasinStyle"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal"
            android:layout_marginEnd="@dimen/margin_end_5dp"
            android:text="@string/key_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_division"
            style="@style/ButtonMoccasinStyle"
            android:text="@string/key_division" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_7"
            style="@style/ButtonMoccasinStyle"
            android:layout_marginEnd="@dimen/margin_end_5dp"
            android:text="@string/key_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_8"
            style="@style/ButtonMoccasinStyle"
            android:layout_marginEnd="@dimen/margin_end_5dp"
            android:text="@string/key_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_9"
            style="@style/ButtonMoccasinStyle"
            android:layout_marginEnd="@dimen/margin_end_5dp"
            android:text="@string/key_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiplication"
            style="@style/ButtonMoccasinStyle"
            android:text="@string/key_multiplication" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_4"
            style="@style/ButtonMoccasinStyle"
            android:layout_marginEnd="@dimen/margin_end_5dp"
            android:text="@string/key_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_5"
            style="@style/ButtonMoccasinStyle"
            android:layout_marginEnd="@dimen/margin_end_5dp"
            android:text="@string/key_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_6"
            style="@style/ButtonMoccasinStyle"
            android:layout_marginEnd="@dimen/margin_end_5dp"
            android:text="@string/key_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_subtraction"
            style="@style/ButtonMoccasinStyle"
            android:text="@string/key_subtraction" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            style="@style/ButtonMoccasinStyle"
            android:layout_marginEnd="@dimen/margin_end_5dp"
            android:text="@string/key_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            style="@style/ButtonMoccasinStyle"
            android:layout_marginEnd="@dimen/margin_end_5dp"
            android:text="@string/key_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"
            style="@style/ButtonMoccasinStyle"
            android:layout_marginEnd="@dimen/margin_end_5dp"
            android:text="@string/key_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_addition"
            style="@style/ButtonMoccasinStyle"
            android:text="@string/key_addition" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_0"
            style="@style/ButtonMoccasinStyle"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_marginEnd="@dimen/margin_end_5dp"
            android:text="@string/key_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_dot"
            style="@style/ButtonMoccasinStyle"
            android:layout_marginEnd="@dimen/margin_end_5dp"
            android:text="@string/key_dot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equally"
            android:layout_width="@dimen/android_layout_width_80dp"
            android:layout_height="@dimen/android_layout_height_80dp"
            android:backgroundTint="@color/peach_puff"
            android:text="@string/key_equally"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_28sp" />
    </GridLayout>
</FrameLayout>