<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_yellow" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_marginEnd="@dimen/key_5dp"
            android:backgroundTint="@color/moccasin"
            android:text="@string/key_cancel"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_percentages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/key_5dp"
            android:backgroundTint="@color/moccasin"
            android:text="@string/key_percentages"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/moccasin"
            android:text="@string/key_division"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/key_5dp"
            android:backgroundTint="@color/white"
            android:text="@string/key_7"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/key_5dp"
            android:backgroundTint="@color/white"
            android:text="@string/key_8"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/key_5dp"
            android:backgroundTint="@color/white"
            android:text="@string/key_9"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_multiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/moccasin"
            android:text="@string/key_multiplication"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/key_5dp"
            android:backgroundTint="@color/white"
            android:text="@string/key_4"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/key_5dp"
            android:backgroundTint="@color/white"
            android:text="@string/key_5"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/key_5dp"
            android:backgroundTint="@color/white"
            android:text="@string/key_6"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_subtraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/moccasin"
            android:text="@string/key_subtraction"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/key_5dp"
            android:backgroundTint="@color/white"
            android:text="@string/key_1"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/key_5dp"
            android:backgroundTint="@color/white"
            android:text="@string/key_2"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/key_5dp"
            android:backgroundTint="@color/white"
            android:text="@string/key_3"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_addition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/moccasin"
            android:text="@string/key_addition"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_marginEnd="@dimen/key_5dp"
            android:backgroundTint="@color/white"
            android:text="@string/key_0"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/key_5dp"
            android:backgroundTint="@color/white"
            android:text="@string/key_dot"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_equally"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/peach_puff"
            android:text="@string/key_equally"
            android:textColor="@color/black" />
    </GridLayout>
</FrameLayout>